# ansible-ai-connect-service

./: .flake8  .gitignore  .mergify.yml  .pre-commit-config.yaml  .snyk  .sonarcloud.properties  Dockerfile  MANIFEST.in  Makefile  README-ANSIBLE_AI_MODEL_MESH_CONFIG.md  README.md  README.rst  SECURITY.md  _env  a.json  ansible_ai_connect  ansible_wisdom.Containerfile  chatbot-refactoring-plan.md  codecov.yml  config.properties  flagdata.json  manage.py  manifest.json  out  package-lock.json  pyproject.toml  pytest.ini  requirements-aarch64.txt  requirements-dev-aarch64.txt  requirements-dev-x86_64.txt  requirements-dev.in  requirements-dev.txt  requirements-x86_64.txt  requirements.in  requirements.txt  setup.cfg  sonar-project.properties  t1  t2  test.Containerfile  (+4 more)
.cursor/rules/: django-ai-connect-service.mdc  typescript-react.mdc
.github/: dependabot.yml  mergify.yml  pull_request_template.md
.github/workflows/: Admin_Portal.yml  Build_Push_Image.yml  Build_Push_Model_Image.yml  backport.yml  code_coverage.yml  create_ops_pr.yml  dependabot-auto-merge.yml  dependabot_pip_compile.yml  npm_audit.yml  npm_audit_aap_chatbot.yml  npm_audit_chatbot.yml  pip_audit.yml  pip_compile.yml  pr_check.yml  pr_deployment_test.yml  pre-commit.yml  pyright.yml  repo-sync.yml  security_audit.yml  security_report.yml  sonar-pr.yaml  sync-openapi-spec.yml  ui_compile.yml  ui_compile_chatbot.yml  ui_publish_aap_chatbot.yml  ui_release_aap_chatbot.yml  ui_test_aap_chatbot.yml  uv_export.yml
.tekton/: ansible-ai-connect-service-cseg-pull-request.yaml  ansible-ai-connect-service-cseg-push.yaml  ansible-ai-connect-service-oimw-pull-request.yaml  ansible-ai-connect-service-oimw-push.yaml  ansible-ai-connect-service-pull-request.yaml  ansible-ai-connect-service-push.yaml  wisdom-service-pull-request.yaml  wisdom-service-push.yaml
aap_chatbot/: README.md  eslint.config.mjs  package-lock.json  package.json  vite.config.ts
aap_chatbot/src/: App.test.tsx  App.tsx  Constants.test.ts  Constants.ts  index.css  index.tsx
anonymizor/: HISTORY.rst  LICENSE  README.rst  setup.cfg  setup.py  tox.ini
anonymizor/anonymizor/: __init__.py  anonymizor.py
anonymizor/tests/: test_anonymizor.py
ansible_ai_connect/: test_utils.py  version_info.json
ansible_ai_connect/ai/: apps.py  models.py  resource_api.py  search.py
ansible_ai_connect/ansible_lint/: lintpostprocessing.py
ansible_ai_connect/ari/: postprocessing.py
ansible_ai_connect/healthcheck/: apps.py  backends.py  version_info.py  views.py
ansible_ai_connect/main/: base_views.py  exception_handler.py  middleware.py  permissions.py  pipeline.py  ssl_manager.py  urls.py  utils.py  views.py
ansible_ai_connect/organizations/: models.py  serializers.py
ansible_ai_connect/users/: admin.py  apps.py  auth.py  authentication.py  authz_checker.py  constants.py  models.py  one_click_trial.py  permissions.py  pipeline.py  serializers.py  signals.py  throttling.py  views.py  views_reports.py  wca_auth.py
ansible_ai_connect/wildcard_oauth2/: apps.py  models.py
ansible_ai_connect_admin_portal/: README.md  package-lock.json  package.json
ansible_ai_connect_admin_portal/__mocks__/: monaco-editor.ts  monaco-yaml.ts  react-i18next.ts
ansible_ai_connect_admin_portal/config/: webpack.config.js  webpack.mock.api.keys.modelids.ts  webpack.mock.api.keys.ts  webpack.mock.api.telemetry.ts  webpackDevServer.config.js
ansible_ai_connect_admin_portal/public/: denied.html  index.html
ansible_ai_connect_admin_portal/scripts/: start.js
ansible_ai_connect_admin_portal/src/: AppHeader.tsx  BusyButton.tsx  ModelSettings.css  ModelSettings.tsx  ModelSettingsEditor.tsx  ModelSettingsKey.tsx  ModelSettingsKeyDeletionModal.tsx  ModelSettingsOverview.tsx  PageApp.css  PageApp.tsx  PageMastheadDropdown.tsx  PageSidebar.tsx  SingleInlineEdit.tsx  TelemetrySettings.tsx  i18n.tsx  index.css
ansible_ai_connect_chatbot/: README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ansible_ai_connect_chatbot/src/: AnsibleAIConnectHeader.tsx  App.test.tsx  App.tsx  Clipboard.ts  Constants.ts  first.test.tsx  index.css  index.tsx
ansible_wisdom/: generate_users.py  manage.py  requirements.txt  test_utils.py  version_info.ini
ansible_wisdom/ai/: admin.py  apps.py  feature_flags.py  models.py  search.py
ansible_wisdom/ansible_lint/: lintpostprocessing.py  postprocessing.py
ansible_wisdom/ari/: apps.py  postprocessing.py
ansible_wisdom/healthcheck/: apps.py  backends.py  version_info.py  views.py
ansible_wisdom/lint/: apps.py
ansible_wisdom/main/: asgi.py  base_views.py  exception_handler.py  image_tags.py  middleware.py  pipeline.py  redis.py  serializers.py  settings.py  urls.py  utils.py  views.py  wsgi.py
ansible_wisdom/model/: handler.py  tokenizer.py
ansible_wisdom/organizations/: apps.py  models.py
ansible_wisdom/protos/: codegenerationtaskansiblecodegentrainrequest.proto  codegenerationtaskrequest.proto  generatedresult.proto  modelpointer.proto  producerid.proto  (+9 more)
ansible_wisdom_console_react/: .eslintrc.js  .prettierignore  README.md  package-lock.json  package.json
context/: rules-fqcn.md  rules-full.md  rules-short.md  rules.md  rules.md.bak
deploy/: cert-manager-operator.yaml  certificate.yaml  install-config.yaml  le-staging-dns-clusterissuer.yaml  node-feature-discovery-operator.yaml  nvidia-gpu-operator.yaml  prod-route53-credentials-secret.yaml  route-grpc.yaml  route.yaml
deployment/: install-config.yaml  le-production-dns-clusterissuer.yaml
docs/: MCP-Authentication.md  MCP-OAuth2-Redirect.md  deploy-cluster.md  local.md  pycharm-setup.md
main/: wsgi.py
model-validator/: README.md  conftest.py  pytest.ini  requirements.txt
prometheus/: prometheus.yaml  uwsgi_target_workers.json  workers.yaml
protos/: ansiblerequest.proto  common-service.proto  generatedresult.proto  generation.proto  producer-types.proto  stopreason.proto  wisdomextservice.proto
search/: index.json
tools/: jaeger.py
torchserve/: handler.py  test_pii.py
wisdom/: asgi.py  settings.py  urls.py  wsgi.py
(+744 files in other folders)
