[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ansible-ai-connect"
description = "Ansible Lightspeed with IBM watsonx Code Assistant."
version = "0.1.0"
dependencies = [
  'ansible-core~=2.15.9',
  'ansible-anonymizer~=1.5.0',
  'ansible-risk-insight~=0.2.6',
  'ansible-lint~=24.2.2',
  'boto3~=1.26.84',
  'cryptography~=42.0.6',
  'Django~=4.2.11',
  'django-deprecate-fields~=0.1.1',
  'django-extensions~=3.2.1',
  'django-health-check~=3.17.0',
  'django-import-export~=3.2.0',
  'django-oauth-toolkit~=2.3.0',
  'django_prometheus~=2.2.0',
  'django-test-migrations~=1.3.0',
  'djangorestframework~=3.15.2',
  'drf-spectacular~=0.27.2',
  'grpcio~=1.62.2',
  'ipython~=8.10.0',
  'jwcrypto~=1.5.6',
  'jinja2~=3.1.3',
  'langchain~=0.2.5',
  'launchdarkly-server-sdk~=8.3.0',
  'protobuf~=4.25.3',
  'psycopg[binary]~=3.1.8',
  'pydantic==2.*',
  'pytz',
  'pyOpenSSL~=24.0.0',
  'PyYAML~=6.0',
  'requests~=2.32.0',
  'segment-analytics-python~=2.2.2',
  'social-auth-app-django~=5.4.1',
  'social-auth-core[openidconnect]>=4.4.2',
  'urllib3~=1.26.18',
  'uwsgi~=2.0.22',
  'uwsgi-readiness-check~=0.2.0',
  'django-allow-cidr',
  'django-csp~=3.7',
]
readme = "README.rst"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/ansible/ansible-ai-connect-service"

[project.scripts]
wisdom-manage = "ansible_ai_connect.manage:main"



[tool]

[tool.setuptools.packages.find]
include = ["ansible_ai_connect*"]

[tool.black]
line-length = 100
fast = true

[tool.isort]
profile = "black"

[tool.pyright]
include = [
  "ansible_ai_connect/ai/api/aws/wca_secret_manager.py",
  "ansible_ai_connect/ai/api/model_client/bam_client.py",
  "ansible_ai_connect/ai/api/model_client/dummy_client.py",
  "ansible_ai_connect/ai/api/model_client/grpc_client.py",
  "ansible_ai_connect/ai/api/model_client/http_client.py",
  "ansible_ai_connect/ai/api/model_client/langchain.py",
  "ansible_ai_connect/ai/api/model_client/llamacpp_client.py",
  "ansible_ai_connect/ai/api/model_client/ollama_client.py",
  "ansible_ai_connect/ai/api/model_client/wca_client.py",
  "ansible_ai_connect/users/authz_checker.py"
]
exclude = ["**/test_*.py", "ansible_ai_connect/*/migrations/*.py"]

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.11"
pythonPlatform = "Linux"
